2006-03-28  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ttf.cc (make_index_to_charcode_map): move function from
	open-type-font.cc
	(print_trailer): substitute uniXXXX name if applicable. 

	* lily/pango-font.cc (get_index_to_charcode_map): new function.
	(pango_item_string_stencil): use it to generate uniXXXX names.

	* mf/feta-bolletjes.mf (overdone_heads): add small style (ugly)
	note heads, for uniform widths in shape note output.
	(overdone_heads): hmm. remove them again.

	* scripts/lilypond-book.py (output): add links to filenames.

	* Documentation/topdocs/INSTALL.texi (Top): update versions.

	* lily/note-collision.cc (get_clash_groups): only consider when
	Note_column::dir <> CENTER. Backportme.

	* scripts/lilypond-book.py (get_option_parser): init output_name
	to ''. Backportme.

2006-03-24  Graham Percival  <gpermus@gmail.com>

	* Documentation/topdocs/NEWS.tely: add @end itemize

	* Documentation/user/ global, advanced-notation: minor
	stuff from mailist.

2006-03-23  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ lilypond.tely, music-glossary,
	preface: housekeeping; 2005->2006, remove "notes for 2.6"

2006-03-23  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* mf/GNUmakefile: don't install .enc files.

	* Documentation/topdocs/NEWS.tely: clear for 2.9 cycle.

	* VERSION (PATCH_LEVEL): bump to 2.9.0

2006-03-22  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely: minor fixes
	from mailist.

2006-03-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/topdocs/AUTHORS.texi (Top): add Joe Neeman.

	* branch lilypond_2_8

2006-03-22  Han-Wen Nienhuys  <lilydev@localhost.localdomain>

	* scripts/lilypond-book.py (samefile): new function, for windoze
	compatibility.

2006-03-21  Graham Percival  <gpermus@gmail.com>

	* ly/engraver-init.ly: add info about StaffGroup.

2006-03-21  Han-Wen Nienhuys  <lilydev@localhost.localdomain>

	* input/regression/stem-direction-context.ly: idem.
